isolated scopes for code block

--- a/packages/example/src/test.mdx
+++ b/packages/example/src/test.mdx
@@ -16,3 +16,19 @@ import { useState } from "react";
     )
 }
 ```
+
+```jsx live
+import { Button } from "module-a"
+
+() => {
+    return <Button>Click Me</Button>
+}
+```
+
+```jsx live
+import { Button } from "module-b"
+
+() => {
+    return <Button>Click Me</Button>
+}
+```
