Added a few unit tests for the mangleName function

--- a/packages/example/src/test.mdx
+++ b/packages/example/src/test.mdx
@@ -33,7 +33,7 @@ import { Button } from "module-a"
 ```
 
 ```jsx live
-import { Button } from "module-b"
+import { Button } from "module-b/Button.jsx"
 
 () => {
     return <Button>Click Me</Button>
