Isolated live code scopes, various bugfixes / improvements (#2)
* support for import aliases

* Fixed renderImport

* isolated scopes for code block

* updated CHANGLOGs. Tidy up of example. Fixed bug when using P in mdx

* relocated building to code scope into useMdxScope hook

* Added a few unit tests for the mangleName function

* style improvments to example

--- a/packages/example/src/test.mdx
+++ b/packages/example/src/test.mdx
@@ -3,6 +3,8 @@
 ### Heading 3
 #### Heading 4
 
+# A live code block
+
 ```jsx live
 import { useState } from "react";
 
@@ -14,5 +16,26 @@ import { useState } from "react";
             <button onClick={() => setVisible(visible => !visible)}>Toggle</button>
         </div>
     )
+}
+```
+
+## Isolated Scopes
+
+The following two code blocks both import named exports from different modules, but the named exports have the same 
+name. This demonstrates that the scopes for the two live code blocks are isolated from each other.
+
+```jsx live
+import { Button } from "module-a"
+
+() => {
+    return <Button>Click Me</Button>
+}
+```
+
+```jsx live
+import { Button } from "module-b/Button.jsx"
+
+() => {
+    return <Button>Click Me</Button>
 }
 ```
